2002-04-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* IPAddress.cs: initialize the read only fields with Parse().

2002-04-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* IPAddress.cs: little changes to behave as MS.

2002-04-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Dns.cs (Resolve): behave as MS. Agreed with Mads.

2002-04-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* IPAddress.cs: the icalls for sockets are endianness-aware. So I
	changed a few things. Also included a workaround for bug #23547.

2002-04-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* IPAddress.cs: use System.BitConverter.IsLittleEndian (suggested
	by Paolo) instead of guessing the endianness.

	* SocketAddress.cs: implemented Equals() and GetHashcode().
	
2002-04-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* IPEndPoint.cs: modifications to constructors according to the
	specifications (suggested by Lawrence Pit).

2002-04-15  Patrik Torstensson <patrik.torstensson@labs2.com>

	* IPEndPoint.cs: Fixed build breaker.

2002-04-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* IPEndPoint.cs: implemented Equals() and GetHashCode(). Now 100%
	complete.

2002-04-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* IPAddress.cs: finished all MonoTODO's. Use network order to store 
	the address. Check for max and min values in Address:set. IsLoopback()
	returns now true for all 127.x.y.z. Some more checks in Parse ().
	Some changes to behave as MS does.

2002-02-24  Duncan Mak  <duncan@ximian.com>

	* ICredentialLookup.cs: Added the GetCredential method to the
	interface. The interface is named "ICredentials", should this file
	be renamed?	

	* NetworkCredential.cs: Added to CVS. Need to investigate on how
	GetCredential() works

2002-01-23  Dick Porter  <dick@ximian.com>

	* SocketAddress.cs: Implemented.

	* IPEndPoint.cs: Turned 'Address' field into a real property.
	Implemented Create() and Serialize() methods.
