@@ -1,3 +1,9 @@
+2002-04-27  Lawrence Pit <loz@cable.a2000.nl>
+
+	* Cookie.cs: implemented
+	* CookieCollection.cs: implemented
+	* CookieException.cs: implemented
+
 2002-04-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* IPAddress.cs: initialize the read only fields with Parse().
